[package]
name = "piet-common"
version = "0.0.2"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Selection of a single preferred back-end for piet"
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "2d"]

[features]
d2d = ["piet-direct2d"]
raq = ["piet-raqote", "raqote"]
web = ["piet-web"]

[dependencies]
kurbo = "0.2.1"
piet = { version = "0.0.2", path = "../piet" }
piet-raqote = { version = "0.0.1", path = "../piet-raqote", optional = true }
piet-direct2d = { version = "0.0.2", path = "../piet-direct2d", optional = true }
piet-web = { version = "0.0.2", path = "../piet-web", optional = true }
raqote = { git="https://github.com/jrmuizel/raqote", optional = true}

[target.'cfg(not(any(target_arch="wasm32", target_os="windows")))'.dependencies]
piet-raqote = { version = "0.0.1", path = "../piet-raqote" }
raqote = { git="https://github.com/jrmuizel/raqote" }

[target.'cfg(target_os="windows")'.dependencies]
piet-direct2d = { version = "0.0.2", path = "../piet-direct2d" }
direct2d = "0.2.0"
directwrite = "0.1.4"
dxgi = "0.1.7"
direct3d11 = "0.1.7"

[target.'cfg(target_arch="wasm32")'.dependencies]
piet-web = { version = "0.0.2", path = "../piet-web" }

[dev-dependencies]
image = "0.20.1"
