[package]
name = "piet-raqote"
version = "0.0.1"
authors = ["Paul Miller <paul@pauljmiller.com>", "Connor Brewster <connor.brewster@eagles.oc.edu>"]
description = "Raqote backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "0.0.3", path = "../piet" }
raqote = { git="https://github.com/jrmuizel/raqote", branch="master" }
font-kit = "0.3.1"
skribo = { git="https://github.com/futurepaul/skribo" }

[dev-dependencies]
piet-test = { version = "0.0.3", path = "../piet-test" }
image = "0.20.1"